[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/Mocha Assets/Buttons/Exit.PNG" type="Texture" id=1]
[ext_resource path="res://UI/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Mocha Assets/Buttons/Exitp.PNG" type="Texture" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/transition.png" type="Texture" id=5]

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;

uniform bool active = false;
uniform vec4 color : hint_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec2 uv = UV;
	
	if (active == true){
		if (add_margins) {
			vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
			
			uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
			
			if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
				COLOR.a = 0.0;
			} else {
				COLOR = texture(TEXTURE, uv);
			}
		} else {
			COLOR = texture(TEXTURE, uv);
		}
		
		if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
			COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
			COLOR.a += (1.0 - COLOR.a) * color.a;
		}
	} else {
		COLOR = previous_color
	}
}"

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 18 )
shader_param/active = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="StreamTexture" id=20]
load_path = "res://.import/Bluep.PNG-c0844d088718ec4191c5ad36f32c2810.stex"

[sub_resource type="ShaderMaterial" id=21]
shader = SubResource( 18 )
shader_param/active = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="StreamTexture" id=22]
load_path = "res://.import/Blue.PNG-0a4e3e67c301e39dd3e147344a4e63d3.stex"

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 18 )
shader_param/active = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="StreamTexture" id=24]
load_path = "res://.import/Pinkp.PNG-e36f43efc090632206ebab06b723314e.stex"

[sub_resource type="ShaderMaterial" id=25]
shader = SubResource( 18 )
shader_param/active = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="StreamTexture" id=26]
load_path = "res://.import/Pink.PNG-1869a3b7f8441273fdbf93b0a5f5dd10.stex"

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 159.5, 87 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 72.5625, 40.375 )

[sub_resource type="Animation" id=28]
resource_name = "HideButtonsCredits"
tracks/0/type = "bezier"
tracks/0/path = NodePath("PlayButton:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1456, -0.1, 142.387, 0.25, 0, 2000, -0.25, 0, 0.2, -1467.26 ),
"times": PoolRealArray( 0.1, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PlayButton:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 467, -0.25, 0, 0.25, 0, 467, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CreditsButton:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1458, -0.1, -116.396, 0.2, -1348.96, 2500, -0.25, 0, 0.2, -1967.26 ),
"times": PoolRealArray( 0.1, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CreditsButton:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 671, -0.25, 0, 0.25, 0, 671, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1, 0.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("PlayButton:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1456, -0.1, 142.387, 0.25, 0, 2000, -0.25, 0, 0.2, -1467.26 ),
"times": PoolRealArray( 0.1, 0.6 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ExitButton:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1719, -0.25, 0, 0.25, 0, 1719, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("ExitButton:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 850, -0.3, -278.747, 0.25, 0, 1256, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_hide_animation_for_credits"
} ]
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Transition:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( -1967, -0.25, 0, 0.25, 0, 471, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Transition:position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 521, -0.25, 0, 0.25, 0, 530, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=29]
resource_name = "HideButtonsPlay"
tracks/0/type = "bezier"
tracks/0/path = NodePath("PlayButton:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1456, -0.1, 142.387, 0.25, 0, 2000, -0.25, 0, 0.2, -1467.26 ),
"times": PoolRealArray( 0.1, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PlayButton:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 467, -0.25, 0, 0.25, 0, 467, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CreditsButton:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1458, -0.1, -116.396, 0.2, -1348.96, 2500, -0.25, 0, 0.2, -1967.26 ),
"times": PoolRealArray( 0.1, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CreditsButton:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 671, -0.25, 0, 0.25, 0, 671, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1, 0.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("PlayButton:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1456, -0.1, 142.387, 0.25, 0, 2000, -0.25, 0, 0.2, -1467.26 ),
"times": PoolRealArray( 0.1, 0.6 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ExitButton:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1719, -0.25, 0, 0.25, 0, 1719, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("ExitButton:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 850, -0.3, -278.747, 0.25, 0, 1256, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_hide_animation_for_play"
} ]
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Transition:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( -1967, -0.25, 0, 0.25, 0, 471, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Transition:position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 521, -0.25, 0, 0.25, 0, 530, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("PlayButton:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PlayButton:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 467, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CreditsButton:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 2500, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CreditsButton:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 671, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ExitButton:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1719, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ExitButton:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 850, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Transition:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 273, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Transition:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 530, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "ShowButtons"
length = 0.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("PlayButton:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2000, -0.25, 0, 0.2, -1467.26, 1456, -0.1, 142.387, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PlayButton:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 467, -0.25, 0, 0.25, 0, 467, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CreditsButton:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 2500, -0.25, 0, 0.2, -1967.26, 1458, -0.1, -116.396, 0.2, -1348.96 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CreditsButton:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 671, -0.25, 0, 0.25, 0, 671, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("PlayButton:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 2000, -0.25, 0, 0.2, -1467.26, 1456, -0.1, 142.387, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ExitButton:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1719, -0.25, 0, 0.25, 0, 1719, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.45 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("ExitButton:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1256, -0.25, 0, 0.25, 0, 850, -0.3, -278.747, 0.25, 0 ),
"times": PoolRealArray( 0, 0.45 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Transition:position:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 827, -0.25, 0, 0.25, 0, -1975, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Transition:position:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 526, -0.25, 0, 0.25, 0, 522, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="PlayButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 2000, 467 )

[node name="ButtonPressed" parent="PlayButton" index="0"]
material = SubResource( 19 )
texture = SubResource( 20 )

[node name="ButtonDefault" parent="PlayButton" index="1"]
material = SubResource( 21 )
texture = SubResource( 22 )

[node name="CreditsButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 2500, 671 )
button_type = 1

[node name="ButtonPressed" parent="CreditsButton" index="0"]
material = SubResource( 23 )
texture = SubResource( 24 )

[node name="ButtonDefault" parent="CreditsButton" index="1"]
material = SubResource( 25 )
texture = SubResource( 26 )

[node name="CollisionShape2D" parent="CreditsButton" index="2"]
position = Vector2( 0.5, -1 )
shape = SubResource( 1 )

[node name="Label" parent="CreditsButton" index="3"]
text = "credits"

[node name="ExitButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 1719, 850 )
button_type = 3

[node name="ButtonPressed" parent="ExitButton" index="0"]
texture = ExtResource( 3 )

[node name="ButtonDefault" parent="ExitButton" index="1"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="ExitButton" index="2"]
position = Vector2( 4.5625, 1.375 )
shape = SubResource( 27 )

[node name="Label" parent="ExitButton" index="3"]
visible = false
text = ""

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ShowButtons"
anims/HideButtonsCredits = SubResource( 28 )
anims/HideButtonsPlay = SubResource( 29 )
anims/RESET = SubResource( 2 )
anims/ShowButtons = SubResource( 3 )

[node name="Transition" type="Sprite" parent="."]
position = Vector2( 273, 530 )
scale = Vector2( 1.68006, 1.68006 )
texture = ExtResource( 5 )

[editable path="PlayButton"]
[editable path="CreditsButton"]
[editable path="ExitButton"]
